--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -16,103 +16,4 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need to modernise your organisation? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
-tagline_cta: Paying more for less? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
-
-button_cta1_text: Solutions
-button_cta1_url: /our-solutions
-
-button_cta2_text: Technologies
-button_cta2_url: /supported-technologies
-
-#button_cta2_text: Technologies
-#button_cta2_url: /supported-technologies
-
-above_the_fold_images:
-  left-top: ./assets/img/photos/home/left-top-eriz.jpg
-  left-top-srcset: ./assets/img/photos/home/left-top-eriz@2x.jpg 2x
-  left-bottom: ./assets/img/photos/home/left-bottom-ali.jpg
-  left-bottom-srcset: ./assets/img/photos/home/left-bottom-ali@2x.jpg 2x
-  middle: ./assets/img/photos/home/middle-2-axops.jpg
-  middle-srcset: ./assets/img/photos/home/middle-2-axops@2x.jpg 2x
-  right-top: ./assets/img/photos/home/right-top-1.jpg
-  right-top-srcset: ./assets/img/photos/home/right-top-1@2x.jpg 2x
-  right-middle: ./assets/img/photos/home/right-middle-moira.jpg
-  right-middle-srcset: ./assets/img/photos/home/right-middle-moira@2x.jpg 2x
-  right-bottom: ./assets/img/photos/home/right-bottom-marti.jpg
-  right-bottom-srcset: ./assets/img/photos/home/right-bottom-marti@2x.jpg 2x
-
-why_choose_us_section:
-  enabled: true
-  intro_tagline: “When done well, software is invisible.” - Bjarne Stroustrup
-  main_tagline: 'Taming operational <span class="underline">inefficiencies</span> empowers <span class="underline-3 style-2 green">transformation</span> &#128161;'
-  outro_tagline: '<span class="underline-3 style-2 yellow">Everything</span> we do at AxOps&#8482; optimises:'
-  tabs:
-    -
-      id: tab-1
-      a_class: nav-link d-flex flex-row active
-      svg_src: ./assets/img/icons/lineal/savings.svg
-      tabsvg_src: ./assets/img/icons/lineal/savings.svg
-      svg_class: svg-inject icon-svg icon-svg-md text-yellow me-4
-      div_class: tab-pane fade show active
-      title: Cost of Ownership
-      summary: Leverage the Cloud to reduce fixed costs and focus on value creation.
-      tagline: Cloud adoption can rapidly reduce your CapEx <span class="underline">and</span> OpEx, but there’s more to it than just "well-oiled machinery".
-      text: "To truly appreciate the benefits of the Cloud, it's important to align your business to take advantage of them. We'll help you address:"
-      image1_src: ./assets/img/photos/about7.jpg
-      image1_srcset: ./assets/img/photos/about3@2x.jpg 2x
-      image2_src: ./assets/img/photos/home/cost-of-ownership-1.jpg
-      image2_srcset: ./assets/img/photos/home/cost-of-ownership-1.jpg 2x
-      bullets:
-        -
-          - Inefficiencies in your current environment, e.g. technical debt.
-          - How to modernize to be more efficient, empowering growth.
-        -
-          - How to leverage the Cloud to support your competitive edge.
-          - How to optimise your technology infrastructure for infinite scale.
-    -
-      id: tab-2
-      a_class: nav-link d-flex flex-row
-      svg_src: ./assets/img/icons/lineal/rocket.svg
-      tabsvg_src: ./assets/img/icons/lineal/rocket.svg
-      svg_class: svg-inject icon-svg icon-svg-md text-green me-4
-      div_class: tab-pane fade
-      title: Operational Efficiency
-      summary: Rapidly and reliably build products and manage operations at scale.
-      tagline: Execute workloads efficiently, obtain valuable operational insights, and continuously refine operations to <span class="underline-3 style-2 green">deliver value</span>.
-      text: "To achieve operational efficiency, it's essential to understand your workloads and their operating behaviours in detail. We'll help you:"
-      image1_src: ./assets/img/photos/home/operational-efficiency-2a.jpg
-      image1_srcset: ./assets/img/photos/home/operational-efficiency-2a.jpg 2x
-      image2_src: ./assets/img/photos/home/operational-efficiency-1.jpg
-      image2_srcset: ./assets/img/photos/home/operational-efficiency-1.jpg 2x
-      bullets:
-        -
-          - Design and instrument your workloads to provide telemetry and situational awareness.
-          - Develop approaches for safe production deployments with rapid remediation of issues.
-        -
-          - Evaluate your operational readiness, using Cloud tooling for reproducible issue resolution.
-          - Use "operations as code" to develop consistent workload and operations procedures.
-    -
-      id: tab-3
-      a_class: nav-link d-flex flex-row
-      svg_src: ./assets/img/icons/lineal/startup.svg
-      tabsvg_src: ./assets/img/icons/lineal/startup.svg
-      svg_class: svg-inject icon-svg icon-svg-md text-red me-4
-      div_class: tab-pane fade
-      title: Innovation
-      summary: Reduce risk, retire technical debt, and focus on drivers that matter.
-      tagline: Streamline your business for greater efficiency and faster turnaround times, so you can focus on <span class="underline-3 style-2 yellow">differentiation</span> &#128161;
-      text: "Whatever your innovation goals, adopting the Cloud can increase your chances of success by enabling you to deliver more in less time. We'll assist you with:"
-      image1_src: ./assets/img/photos/home/innovation-2.jpg
-      image1_srcset: ./assets/img/photos/home/innovation-2.jpg 2x
-      image2_src: ./assets/img/photos/home/innovation-3.jpg
-      image2_srcset: ./assets/img/photos/home/innovation-3.jpg 2x
-      bullets:
-        -
-          - Evaluating your environments with a view to establish better, more creative ways of operating.
-          - Lowering expenditure, retiring technical debt, and speeding up product development cycles.
-        -
-          - Using Cloud technology for developing processes to enhance your customers' experiences.
-          - Leveraging economies of scale to make a meaningful impact with your products and services.
-
-client_logos_section:
-  enabled: false
+tagline_cta: Paying more for less? Need to modernise your IT systems? Lacking in-house expertise for Cloud adoption?
