--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -16,7 +16,7 @@ tagline_dynamic_delay: 100
 #tagline_cta: Paying too much for too little? Need to modernise your organisation? Considering the Cloud but lack the in-house expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your systems? Considering the Cloud but lack the expertise?
 #tagline_cta: Paying too much for too little? Need to modernise your IT systems? Considering the Cloud but lack the in-house expertise?
-tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking in-house expertise for Cloud adoption?
+tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking expertise for Cloud adoption?
 
 button_cta1_text: Solutions
 button_cta1_url: /our-solutions
