--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -2,7 +2,7 @@ tagline_intro: Meet the AXOPS&#8482; Team
 tagline_main: Our battle-tested, international, multi-disciplinary talent pool.
 tagline_here: The Team
 site_url: https://axopstech.github.io
-image_path: &site_url /assets/img/photos/team/
+image_path: https://axopstech.github.io/assets/img/photos/team/
 members:
   -
     name: Eriz Zárate
