--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -2,11 +2,10 @@ tagline_intro: Meet the AXOPS&#8482; Team
 tagline_main: Our battle-tested, international, multi-disciplinary talent pool.
 tagline_here: The Team
 site_url: https://axopstech.github.io
-image_path: /assets/img/photos/team
 members:
   -
     name: Eriz Zárate
-    image_src: &site_url '%image_path/eriz-zarate.jpg'
+    image_src: &site_url /assets/img/photos/team/eriz-zarate.jpg'
     image_srcset: &site_url /assets/img/photos/team/eriz-zarate.jpg 2x
     role: Blockchain Solution Architect
 
