--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -5,7 +5,7 @@ site_url: https://axopstech.github.io
 members:
   -
     name: Eriz Zárate
-    image_src: &site_url /assets/img/photos/team/eriz-zarate.jpg'
+    image_src: &site_url /assets/img/photos/team/eriz-zarate.jpg
     image_srcset: &site_url /assets/img/photos/team/eriz-zarate.jpg 2x
     role: Blockchain Solution Architect
 
