updated main tagline creatives

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -4,7 +4,8 @@ mode: live
 #tagline_main: Accelerated Digital Transformation,<br />
 #tagline_main: Accelerated Digital Transformation,<br />
 #tagline_main: Unlock Your Digital Transformation,<br />
-tagline_main: Expedite your path from idea to execution,<br />
+#tagline_main: Expedite your path from idea to execution,<br />
+tagline_main: Expedite your journey from idea to execution,<br />
 
 #tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
 tagline_dynamic: at low cost, and infinite scale, on your terms 🎯
