add category navigation to solutions pages

--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,8 +1,7 @@
 site_url: https://axopstech.github.io
-#site_url: https://localhost:4000
 tagline_intro: AxOps&#8482; Solutions Overview
 tagline_here: Solutions
-tagline_href: /our-solutions/
+tagline_href: /our-solutions
 tagline_main: Unlock Your Organisation's Digital Transformation
 
 members:
