--- a/_data/pageconfig/training.yml
+++ b/_data/pageconfig/training.yml
@@ -1,7 +1,7 @@
 tagline_href: /our-solutions
 pages:
   solutions-quantitative-training.md:
-    title: Quantitative R&D Training
+    title: Quant R&D Training
     tagline: "Advance Your Decision Intelligence with AxOps&#8482; Quantitative R&D Training"
 
     services:
