misc. updates to navigation, yaml + text

--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -1,5 +1,5 @@
-tagline_intro: Meet the AXOPS&#8482; Team
-tagline_main: Our battle-tested, international, multi-disciplinary talent pool.
+tagline_intro: The AXOPS&#8482; Team
+tagline_main: Our battle-tested, international, multi-disciplinary talent pool
 tagline_here: The Team
 site_url: https://axopstech.github.io
 members:
