--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -5,48 +5,93 @@ site_url: https://axopstech.github.io
 members:
   -
     name: Eriz Zárate
+    slug: eriz-zarate
     image_src: &site_url /assets/img/photos/team/eriz-zarate.jpg
     image_srcset: &site_url /assets/img/photos/team/eriz-zarate.jpg 2x
     role: Blockchain Solution Architect
+    bio: >
+      <p>Eriz brings over 10 years of experience in C-suite technical and management roles, 
+      having consulted, worked, and created companies in the fields of Applied AI, Quantitative 
+      Financial Engineering, Quantum Computing, B2B/B2C SaaS, and Blockchain, focusing on Scalability, 
+      CyberSec and Performance plus having directly managed 30+ engineers in various enterprises.</p>
+      <p>His expertise lies in Architectural Design, Development, and Deployment for complex technical 
+      and functional challenges.</p>
+      <p>He excels in delivering outstanding communication skills and laser-focused detail-oriented execution.</p>
 
   -
     name: Moira Khan
+    slug: moira-khan
     image_src: &site_url /assets/img/photos/team/moira-khan.jpg
     image_srcset: &site_url /assets/img/photos/team/moira-khan.jpg 2x
     role: PMO / IT Project Manager
+    bio: >
+      <p>Moira has over 20 years worth of international experience in various managerial and executive capacities
+       across the IT and Legal sectors. She brings her strong skills in organisational and project management, technical 
+       programmes and applications, complimented with a wide range of administrative skills, training and development, 
+      communication and people management.</p><p>Pressure fears this lady, as she works extremely well under it, aside from
+      having an incredible knack for resolving complex challenges in record time.</p><p>As our clients have rightly said over
+      time: <i>"Everyone needs a Moira; problem is, there's only one Moira."</i></p>
   
   -
     name: Alain Porto
+    slug: alain-porto
     image_src: &site_url /assets/img/photos/team/alain-porto-2.jpg
     image_srcset: &site_url /assets/img/photos/team/alain-porto-2.jpg 2x
     role: DevOps Architect
+    bio: >
+      <p>Alain is a versatile Software Architect, DevOps Engineer, and Agile Delivery Manager.</p>
+      <p>He's honed his craft in the FinTech and Machine Tool industries, specialising in
+      developing bespoke products for processing large, heterogenous data sources 
+      and delivering industrial data management solutions in on-premise, hybrid, and
+      public cloud environments.</p><p>A passionate team leader, we're fortunate to be able
+      to count on his skills in multidisciplinary team and product management, developed over
+      the course of his tenure as CTO in three different companies prior to joining the AxOps&#8482; team.</p>
   
   -
     name: Martí Castany
+    slug: marti-castany
     image_src: &site_url /assets/img/photos/team/marti-castany.jpg
     image_srcset: &site_url /assets/img/photos/team/marti-castany.jpg 2x
     role: Quantitative R&D Consultant
+    bio: >
+      <p>Martí brings to AxOps&#8482;, over 8 years' experience as a Quantitative Researcher, Portfolio Manager 
+      and Consultant for risk management services on both Buy and Sell sides.</p><p>He has a background in
+      Electrical and Hardware Engineering, as well as EMC-compliant multi-layer digital-analog PCB design.</p>
+      <p>His specialities include the design and development of systematic analytics and forecasting models for
+      extremely large, high density, and high frequency time series datasets, and their deployment as microservices.</p>
   
   -
     name: Tiniki (Generative AI)
+    slug: tiniki-gai
     image_src: &site_url /assets/img/photos/team/tiniki.jpg
     image_srcset: &site_url /assets/img/photos/team/tiniki.jpg 2x
     role: Director of All Creatives
 
   -
     name: Saad Hashmi
+    slug: saad-hashmi
     image_src: &site_url /assets/img/photos/team/saad-hashmi-1.jpg
     image_srcset: &site_url /assets/img/photos/team/saad-hashmi-1.jpg 2x
     role: Business Strategy & Presales
 
   -
     name: Ali Saif
+    slug: ali-saif
     image_src: &site_url /assets/img/photos/team/ali-saif-1.jpg
     image_srcset: &site_url /assets/img/photos/team/ali-saif-1.jpg 2x
     role: Founder | Technical Architect
+    bio: >
+      <p>Ali brings to AxOps&#8482;, over two decades worth of battle scars earned as a Software Engineer, Technical Architect, 
+      Quant Developer, and Technical Trainer in the Professional IT Services, Decision Intelligence, 
+      FinTech, Quantitative Finance, Applied AI/ML, and EdTech industries.</p> 
+      <p>He specialises in Design and Delivery of Big Data and Cloud Data Solutions, and setting 
+      up Data Engineering practices across Architecture, Design, Development & Deployment.</p>
+      <p>He has strong stakeholder-management skills, having worked closely with C-Suite leaders, clients, 
+      engineering and cross-functional teams of all sizes.</p>
 
   -
     name: Squirrel (Generative AI)
+    slug: squirrel-gai
     image_src: &site_url /assets/img/photos/team/squirrel.jpg
     image_srcset: &site_url /assets/img/photos/team/squirrel.jpg 2x
     role: Developer of All Things
