added contact element to navigation yaml

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -294,3 +294,7 @@
       name: Partners
       url: /our-partners
       enabled: true
+    -
+      name: Contact Us
+      url: /contact
+      enabled: true
