--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -29,14 +29,16 @@ button_cta2_url: /supported-technologies
 #button_cta2_url: /supported-technologies
 
 above_the_fold_images:
+  left-top-2: ./assets/img/photos/home/left-top-saad.jpg
+  left-top-2-srcset: ./assets/img/photos/home/left-top-saad@2x.jpg 2x
   left-top: ./assets/img/photos/home/left-top-eriz.jpg
   left-top-srcset: ./assets/img/photos/home/left-top-eriz@2x.jpg 2x
   left-bottom: ./assets/img/photos/home/left-bottom-ali.jpg
   left-bottom-srcset: ./assets/img/photos/home/left-bottom-ali@2x.jpg 2x
   middle: ./assets/img/photos/home/middle-2-axops.jpg
   middle-srcset: ./assets/img/photos/home/middle-2-axops@2x.jpg 2x
-  right-top: ./assets/img/photos/home/right-top-1.jpg
-  right-top-srcset: ./assets/img/photos/home/right-top-1@2x.jpg 2x
+  right-top: ./assets/img/photos/home/right-top-alain.jpg
+  right-top-srcset: ./assets/img/photos/home/right-top-alain@2x.jpg 2x
   right-middle: ./assets/img/photos/home/right-middle-moira-2.jpg
   right-middle-srcset: ./assets/img/photos/home/right-middle-moira-2@2x.jpg 2x
   right-bottom: ./assets/img/photos/home/right-bottom-marti.jpg
