--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -10,7 +10,7 @@ members:
     image_srcset: &site_url /assets/img/photos/team/eriz-zarate.jpg 2x
     role: Blockchain Solution Architect
     bio: >
-      <p>Eriz brings over 10 years of experience in C-suite technical and management roles, 
+      <p>Eriz brings to AxOps&#8482;, over 10 years of experience in C-suite technical and management roles, 
       having consulted, worked, and created companies in the fields of Applied AI, Quantitative 
       Financial Engineering, Quantum Computing, B2B/B2C SaaS, and Blockchain, focusing on Scalability, 
       CyberSec and Performance plus having directly managed 30+ engineers in various enterprises.</p>
@@ -25,7 +25,7 @@ members:
     image_srcset: &site_url /assets/img/photos/team/moira-khan.jpg 2x
     role: PMO / IT Project Manager
     bio: >
-      <p>Moira has over 20 years worth of international experience in various managerial and executive capacities
+      <p>Moira has over 20 years of international experience in various managerial and executive capacities
        across the IT and Legal sectors. She brings her strong skills in organisational and project management, technical 
        programmes and applications, complimented with a wide range of administrative skills, training and development, 
       communication and people management.</p><p>Pressure fears this lady, as she works extremely well under it, aside from
@@ -83,12 +83,12 @@ members:
     slug: ali-saif
     image_src: &site_url /assets/img/photos/team/ali-saif-1.jpg
     image_srcset: &site_url /assets/img/photos/team/ali-saif-1.jpg 2x
-    role: Technical Architect
+    role: Technical Solutions Architect
     bio: >
-      <p>Ali brings to AxOps&#8482;, over two decades worth of battle scars earned as a Software Engineer, Technical Architect, 
+      <p>Ali has over two decades worth of battle scars earned as a Software Engineer, Technical Architect, 
       Quant Developer, and Technical Trainer in the Professional IT Services, Decision Intelligence, 
       FinTech, Quantitative Finance, Applied AI/ML, and EdTech industries.</p> 
-      <p>He specialises in Design and Delivery of Big Data and Cloud Data Solutions, and setting 
+      <p>He specialises in end-to-end Design, Implementation, and Delivery of Big Data and Cloud Data Solutions, and setting 
       up Data Engineering practices across Architecture, Design, Development & Deployment.</p>
       <p>He has strong stakeholder-management skills, having worked closely with C-Suite leaders, clients, 
       engineering and cross-functional teams of all sizes.</p>
