minor update to team yaml

--- a/_data/pageconfig/team.yml
+++ b/_data/pageconfig/team.yml
@@ -52,7 +52,7 @@ members:
     slug: marti-castany
     image_src: &site_url /assets/img/photos/team/marti-castany.jpg
     image_srcset: &site_url /assets/img/photos/team/marti-castany.jpg 2x
-    role: Quantitative R&D Consultant
+    role: Quant R&D Consultant
     bio: >
       <p>Martí brings to AxOps&#8482;, over 8 years' experience as a Quantitative Researcher, Portfolio Manager 
       and Consultant for risk management services on both Buy and Sell sides.</p><p>He has a background in
