updated to better organised directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ assets/img/partners/cintra*
 assets/img/partners/original
 assets/img/photos/custom
 assets/img/illustrations/custom/original
+assets/img/illustrations/case-studies/original
 .jekyll-cache
 .jekyll-metadata
 .sass-cache
