--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: https://www.axops.tech
 title: AxOps | Technology, Consultancy, and Training Services
 address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
 email: 
+company_description: AxOps&#8482; is a Technology, Consulting, and Training Services company. We expedite your journey from idea to execution 🎯
 
 nav_logo: &url /assets/img/axops-134x26.png
 nav_logo2x: &url /assets/img/axops-134x26@2x.png 2x
