--- a/_data/pageconfig/case-studies.yml
+++ b/_data/pageconfig/case-studies.yml
@@ -66,8 +66,9 @@ members:
     service: Cloud Engineering
     challenges: >
       <p>The social media landscape is highly competitive, with a variety of platforms catering to different types of content 
-      creation and sharing. We set out to create a social media super app that would allow users to create and share 
-      multiple types of content, such as video, audio, text, audio journaling, and live rooms, all within the same app and user experience.</p>
+      creation and sharing.</p>
+      <p>The client for this project wanted us to create a social media super app that would allow users to create and share multiple types of content, 
+      such as video, audio, text, audio journaling, and live rooms, all within the same app and user experience.</p>
     research_and_development: >
       <p>Our research and development personnel began by studying the existing social media platforms and identifying their limitations 
       in terms of content creation and sharing. We also conducted market research to understand the specific needs and requirements 
@@ -77,20 +78,23 @@ members:
       record and share their thoughts and experiences in an audio format.</p>
     architecture: >
       <p>To ensure scalability and performance, we used a variety of technologies and architectures, including Serverless and Flutter, 
-      to cut development times by 2x. Specifically, we used AWS Lambda, Amazon S3, and Amazon DynamoDB to achieve 
+      to cut development times by 2x. </p>
+      <p>Specifically, we used AWS Lambda, Amazon S3, and Amazon DynamoDB to achieve 
       high scalability and performance.</p>
     deployment: >
       <p>Once development was complete, we deployed the application on AWS using a microservices 
       architecture, with each service running on a separate AWS Lambda function. This allowed us to easily scale the app as needed 
       and handle high traffic loads on-demand.</p>
       <p>To store the user data, we used Amazon S3 and Amazon DynamoDB, making sure redundancy was taken into account and accordingly 
-      deployed. These services allowed us to store the data in a highly available and scalable manner. Additionally, we implemented 
+      deployed. These services allowed us to store the data in a highly available and scalable manner.</p>
+      <p>Additionally, we implemented 
       a variety of security best practices, such as encryption in-transit and at-rest, and multi-factor authentication, to ensure 
       the safety and security of user data.</p>
     conclusion: >
       <p>Through the development and deployment of this social media super app on AWS, we were able to provide users with a unique 
       and comprehensive social media experience. The app allows users to create and share a variety of content types, all within 
-      the same app and user experience. By using Serverless and Flutter on AWS, we were able to achieve 
+      the same app and user experience. </p>
+      <p>By using Serverless and Flutter on AWS, we were able to achieve 
       high scalability and performance, while also ensuring the security of user data. The app has had zero downtime since its launch and 
       is highly performant, taking into account the fact that it is using resource-heavy user experience components such as 3D environments.</p>
     technologies:
@@ -107,9 +111,9 @@ members:
     industry: FinTech
     service: Application Engineering
     challenges: >
-      <p>In the investment finance industry, risk management and regulatory compliance are a crucial aspect of operations. In this project,
-      we built a multi-tenant SaaS platform that utilizes artificial intelligence to automate and analyze risk. The 
-      platform was deployed on DigitalOcean, using Kubernetes and Terraform to manage the infrastructure.</p>
+      <p>In the investment finance industry, risk management and regulatory compliance are a crucial aspect of operations. In this 
+      project, we built a multi-tenant SaaS platform that utilizes artificial intelligence to automate and analyze risk. </p>
+      <p>The platform was deployed on DigitalOcean, using Kubernetes and Terraform to manage the infrastructure.</p>
     research_and_development: >
       <p>The platform's architecture is based on a microservices approach, where each service is responsible for a specific functionality. 
       This allows for greater scalability and flexibility in managing the resources required for each tenant.</p>
@@ -128,10 +132,10 @@ members:
       research to understand the specific requirements and tailor the technology accordingly.</p>
     conclusion: >
       <p>In summary, the Multi-Tenancy SaaS platform uses AI to automate and analyze risk, is deployed on DigitalOcean, and managed via 
-      Kubernetes and Terraform. The platform's architecture is based on microservices, which allows for scalability and flexibility. 
-      The platform is built with Golang to leverage asynchronous programming, and multi-tenant architecture to handle real-time data 
-      access and high-performance request processing. A full AI production pipeline was also deployed as the core of the platform. The 
-      platform was successfully deployed in a highly regulated environment with complex data access and migration requirements.</p>
+      Kubernetes and Terraform. The platform's architecture is based on microservices, which allows for scalability and flexibility.</p>
+      <p>The platform is built with Golang to leverage asynchronous programming, and multi-tenant architecture to handle real-time data 
+      access and high-performance request processing. A full AI production pipeline was also deployed as the core of the platform. </p>
+      <p>The platform was successfully deployed in a highly regulated environment with complex data access and migration requirements.</p>
     technologies:
       - Golang
       - Terraform
@@ -146,10 +150,11 @@ members:
     industry: Transportation
     service: Blockchain Development
     challenges: >
-      <p>The taxi industry has been facing challenges with centralized systems and lack of transparency. Our company set out to create 
-      a highly available, blockchain-based mobility solution for the taxi industry that would address these issues and provide a more 
-      efficient and secure service for both customers and drivers. By leveraging the strengths of both Amazon Web Services (AWS) and 
-      the Google Cloud Platform (GCP), we aimed to create a solution that is scalable, secure, and highly available.</p>
+      <p>The taxi industry has been facing challenges with centralized systems and lack of transparency. Upon finalising the scope with
+      our client for this project, we set out to create a highly available, blockchain-based mobility solution for the taxi industry 
+      that would address these issues and provide a more efficient and secure service for both customers and drivers.</p>
+      <p>By leveraging the strengths of both Amazon Web Services (AWS) and the Google Cloud Platform (GCP), we aimed to create 
+      a solution that is scalable, secure, and highly available.</p>
     research_and_development: >
       <p>Our research and development personnel began by studying the existing taxi industry systems and identifying their limitations in 
       terms of transparency and scalability. We also conducted market research to understand the specific needs and requirements of 
@@ -174,9 +179,9 @@ members:
       a variety of security best practices, such as encryption and multi-factor authentication, to ensure the safety of user data.</p>
     conclusion: >
       <p>Through the development and deployment of this blockchain-based mobility solution on AWS and Google Cloud, 
-      we were able to provide customers and taxi drivers with a more efficient and secure service. The solution addresses the challenges of 
-      transparency and scalability that the taxi industry has been facing and modernizes the business model with the use of decentralized 
-      finance and tokenization.</p>
+      we were able to provide customers and taxi drivers with a more efficient and secure service. </p>
+      <p>The solution addresses the challenges of transparency and scalability that the taxi industry has been facing 
+      and modernizes the business model with the use of decentralized finance and tokenization.</p>
       <p>By using a multi-cloud architecture on AWS and GCP, and Kubernetes, Terraform, Serverless, and Blockchain, we were 
       able to achieve a highly scalable, performant, and secure solution while safeguarding user data. The use of modern programming languages 
       such as Rust, Swift, and Kotlin helped us to reduce response times by 3x and improve the user experience.</p>
@@ -188,17 +193,17 @@ members:
       - Kubernetes
   
   decentralized-p2p-challenges-aws.md:
-    title: "Case Study: Decentralized Peer-to-Peer Challenges on AWS"
-    subtitle: Developing and Deploying a Blockchain-based Social Decentralized Peer-to-Peer Gaming Platform.
+    title: "Case Study: Decentralized Peer-to-Peer Collateral Exchange on AWS"
+    subtitle: Developing and Deploying a Blockchain-based Social Decentralized Peer-to-Peer Collateral Exchange Platform.
     slug: decentralized-p2p-challenges-aws
     image_src: &site_url /assets/img/illustrations/case-studies/decentralized-p2p-challenges-aws.jpg
-    industry: Online Gaming
+    industry: FinTech
     service: Blockchain Development
     challenges: >
-      <p>The online gaming industry has traditionally been centralized, with a few large companies controlling the majority of the market. 
-      However, with the advent of blockchain technology, there is an opportunity to create decentralized peer-to-peer platforms that 
-      are more transparent and secure. We set out to develop such a platform, with a focus on incorporating social features and a 
-      proprietary decentralized dispute resolution flow.</p>
+      <p>The FinTech payments industry has traditionally been centralized, with a few large companies controlling the majority of the market. 
+      However, with the advent of blockchain technology, our client for this project saw an opportunity to create decentralized peer-to-peer 
+      platforms that are more transparent and secure. </p>
+      <p>We set out to develop such a platform, with a focus on incorporating social features and a proprietary decentralized dispute resolution flow.</p>
     research_and_development: >
       <p>Our research and development personnel began by studying the existing decentralized platforms and identifying their limitations. 
       We also conducted market research to understand the specific needs and requirements of users in the industry.</p>
@@ -222,9 +227,10 @@ members:
       of updates.</p>
     conclusion: >
       <p>Through the development and deployment of this blockchain-based social decentralized peer-to-peer platform, we were able to 
-      provide users with a more transparent and secure way to exchange collateral. The incorporation of social features and a proprietary 
-      decentralized dispute resolution flow sets the platform apart from existing decentralized platforms and creates a unique user 
-      experience. The platform has been well received by users and has shown strong growth since its launch.</p>
+      provide users with a more transparent and secure way to exchange collateral.</p>
+      <p>The incorporation of social features and a proprietary decentralized dispute resolution flow sets the platform apart from existing 
+      decentralized platforms and creates a unique user experience. The platform has been well received by users and has shown strong 
+      growth since its launch.</p>
     technologies:
       - Rust
       - Swift
