sanitised solutions root links to "/solutions"

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -20,7 +20,7 @@ tagline_dynamic_delay: 100
 tagline_cta: Underutilising resources? Need to modernise your IT systems? Lacking expertise for Cloud adoption?
 
 button_cta1_text: Solutions
-button_cta1_url: /our-solutions
+button_cta1_url: /solutions
 
 button_cta2_text: Technologies
 button_cta2_url: /supported-technologies
