--- a/_data/pageconfig/training.yml
+++ b/_data/pageconfig/training.yml
@@ -1,4 +1,4 @@
-tagline_href: /our-solutions
+tagline_href: /solutions
 pages:
   solutions-quantitative-training.md:
     title: Quant R&D Training
