--- a/_data/pageconfig/our-solutions.yml
+++ b/_data/pageconfig/our-solutions.yml
@@ -1,7 +1,7 @@
 site_url: https://axopstech.github.io
 tagline_intro: AxOps&#8482; Solutions Overview
 tagline_here: Solutions
-tagline_href: /our-solutions
+tagline_href: /solutions
 tagline_main: Unlock Your Organisation's Digital Transformation
 
 members:
@@ -9,14 +9,14 @@ members:
     name: Technology Consulting
     image_src: &site_url /assets/img/illustrations/custom/data-science-consulting.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/data-science-consulting.jpg 2x
-    url: &site_url /our-solutions/technology-consulting-solutions
+    url: &site_url /solutions/technology-consulting-solutions
     #role: Ask, and consider it done &#127919;
     role:
   -
     name: Technical Training
     image_src: &site_url /assets/img/illustrations/custom/full-stack-development.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/full-stack-development.jpg 2x
-    url: &site_url /our-solutions/technical-training
+    url: &site_url /solutions/technical-training
     #role: Upskill with confidence &#128588;
     role:
   
@@ -24,13 +24,13 @@ members:
     name: Quantitative Training
     image_src: &site_url /assets/img/illustrations/training/quantitative-development.jpg
     image_srcset: &site_url /assets/img/illustrations/training/quantitative-development.jpg 2x
-    url: &site_url /our-solutions/quantitative-training
+    url: &site_url /solutions/quantitative-training
     #role: Make informed decisions &#128065;
     role:
   -
     name: Strategic Advisory
     image_src: &site_url /assets/img/illustrations/custom/solutions-workforce-optimisation.jpg
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-workforce-optijmisation.jpg 2x
-    url: &site_url /our-solutions/strategic-advisory-solutions
+    url: &site_url /solutions/strategic-advisory-solutions
     #role: Leverage our experience &#129417;
     role:
