sanitised technology root links to "technologies"

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -23,7 +23,7 @@ button_cta1_text: Solutions
 button_cta1_url: /solutions
 
 button_cta2_text: Technologies
-button_cta2_url: /supported-technologies
+button_cta2_url: /technologies
 
 #button_cta2_text: Technologies
 #button_cta2_url: /supported-technologies
