--- a/_data/pageconfig/our-technology-consulting-solutions.yml
+++ b/_data/pageconfig/our-technology-consulting-solutions.yml
@@ -10,6 +10,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-cloud-solutions-2.jpg 2x
     url: &site_url /solutions/technology-consulting/cloud-solutions
     role: Ask, and consider it done &#127919;
+    enabled: false
 
   -
     name: Business Analytics
@@ -17,6 +18,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-business-analytics.jpg 2x
     url: &site_url /solutions/technology-consulting/business-analytics
     role: Upskill with confidence &#128588;
+    enabled: true
   
   -
     name: CRM Data Migrations
@@ -24,6 +26,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-crm-data-migrations.jpg 2x
     url: &site_url /solutions/technology-consulting/crm-data-migrations
     role: Leverage our experience &#129417;
+    enabled: true
   
   -
     name: CRM Data Integrations
@@ -31,6 +34,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-crm-data-integrations.jpg 2x
     url: &site_url /solutions/technology-consulting/crm-data-integrations
     role: How we work with clients &#129309;
+    enabled: true
 
   -
     name: Digital Transformation
@@ -38,6 +42,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-digital-transformation.jpg 2x
     url: &site_url /solutions/technology-consulting/digital-transformation
     role: How we work with clients &#129309;
+    enabled: true
 
   -
     name: Bespoke CRM Solutions
@@ -45,6 +50,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-bespoke-crm-solutions.jpg 2x
     url: &site_url /solutions/technology-consulting/bespoke-crm-solutions
     role: How we work with clients &#129309;
+    enabled: true
 
   -
     name: Application Engineering
@@ -52,6 +58,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-application-engineering.jpg 2x
     url: &site_url /solutions/technology-consulting/application-engineering
     role: How we work with clients &#129309;
+    enabled: false
 
   -
     name: Blockchain Solutions
@@ -59,6 +66,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-blockchain-development.jpg 2x
     url: &site_url /solutions/technology-consulting/blockchain-development
     role: How we work with clients &#129309;
+    enabled: true
 
   -
     name: Salesforce Development
@@ -66,6 +74,7 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-salesforce-development.jpg 2x
     url: &site_url /solutions/technology-consulting/salesforce-development
     role: How we work with clients &#129309;
+    enabled: true
 
   -
     name: HubSpot CRM Solutions
@@ -73,3 +82,4 @@ members:
     image_srcset: &site_url /assets/img/illustrations/custom/solutions-hubspot-crm-optimisation.jpg 2x
     url: &site_url /solutions/technology-consulting/hubspot-crm-optimisation
     role: How we work with clients &#129309;
+    enabled: true
